src/assets/style/components/_forms.scss
.section.login {
  position: relative;
  padding: 30px 20px;
  .arrow-back-icon {
    cursor: pointer;
    border: none;
    background-color: white;
  }
}

.section.profile-update {
  padding: 30px 20px;
  .arrow-back-icon {
    cursor: pointer;
    border: none;
    background-color: white;
  }
}
.section.change-settings {
  padding: 30px 20px;
}
.section.signup,
.section.login {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 30px;
  padding: 30px 20px;

  h2 {
    font-size: 36px;
    color: $crl-base-blue;
    width: 100%;
    margin-bottom: 32px;
  }
  .form-control {
    margin: 0 0 60px 0;
    position: relative;
    width: 100%;
    border: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    &--gender {
      margin: 25px 0;
      display: flex;
      justify-content: center;
      align-items: center;
      transform: translate(-10px, 0px);
      .gender {
        position: relative;
        top: 0;
      }
    }
    &--lang {
      display: flex;
      flex-flow: column wrap;
      align-items: center;
      margin: 15px 0;
      .lang {
        position: relative;
        top: 0;
        margin: 15px;
      }
    }
    label {
      // position: absolute;
      left: 8px;
      top: 12px;
      color: $crl-alert-error;
      font-size: 16px;
      display: inline-block;
      padding: 4px 10px;
      font-weight: 400;
      background-color: rgba(255, 255, 255, 0);
      transition: background-color 0.5s ease;
      border: none;
    }
    input,
    textarea {
      display: block;
      width: 343px;
      min-height: 52px;
      outline: none;
      border: 2px solid $crl-base-blue;
      font-size: 15px;
      padding: 0.7rem 0.4rem;
      border-radius: 2px;
    }

    input:focus {
      background: #fff;
    }
  }

  button {
    background: $crl-base-blue;
    border-radius: 8px;
    color: white;
    border: none;
    cursor: pointer;
    display: block;
    font-size: 13px;
    font-weight: bold;
    margin: 0 auto;
    width: 343px;
    height: 52px;
    transition: 0.2s linear;
    &:disabled {
      position: relative;
      opacity: 0.5;
      cursor: unset;
      &:hover {
        background: $crl-base-blue;
        color: white;
        border: none;
      }
    }
    &:hover {
      color: $crl-base-blue;
      border: 2px solid $crl-base-blue;
      background-color: white;
      transition: 0.2s linear;
    }
  }

  .auth-control {
    display: block;
    margin-top: 25px;
    text-align: center;
    .create-account-link {
      text-decoration: underline;
      font-size: 15px;
    }
  }
}

form.cms {
  .main-title {
    width: 95%;
    max-width: 500px;
    border-bottom: 1px solid black;
    margin: 0 auto;
    margin-bottom: 50px;
    font-size: 1.3rem;
  }
  .form-container {
    padding: 0 1%;
    width: 100%;
    max-width: 1200px;
    display: grid;
    grid-template-columns: 50% 50%;
    grid-gap: 10px;
    justify-content: center;
    align-items: center;
    margin: auto {
      bottom: 20px;
    }
    
  }
  .form-control {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100px;
    border: none;
    border-radius: 2px;
    box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
    z-index: 5;
    label {
      text-align: center;
    }
    &:nth-child(2) {
      z-index: 9;
    }
    &:nth-child(8){
      z-index: 8;
    }
  }
  .form-info {
    margin: 25px auto 0 auto;
    min-height: 250px;
    display: block;
    width: 100%;
    max-width: 600px;
    padding-bottom: 20px;
  }
  input {
    width: 100%;
    max-width: 300px;
    &:focus {
      box-shadow: 0px 10px 10px -12px $crl-main-grey-button;
      outline: none;
    }
    &::placeholder {
      font-style: italic;
      color: $crl-main-placeholder;
    }
  }

  textarea {
    height: 190px;
    width: 100%;
    border-radius: 5px;
    padding: 5px 10px;
    outline: none;
    &:focus {
      box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.3);
    }
    &::placeholder {
      font-style: italic;
      color: rgb(187, 187, 187);
    }
  }
  select,
  .css-yk16xz-control,
  input {
    border: none;
    border-bottom: 1px solid black;
    border-radius: 8px 8px 0 0;
    padding: 5px 10px;
    outline: none;
  }

  .submit-btn {
    display: block;
    color: $crl-base;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 0.9rem;
    background-color: $crl-base-blue;
    border:1px solid $crl-base-blue;
    opacity: 1;
    border-radius: 30px;
    padding: 10px 35px;
    margin: 25px auto;
   cursor: pointer;
   &:hover {
     background-color: rgba($crl-base-blue, 0.9);
   }
  }

 
  .editor {
    width: 100%;
    max-width: 1200px;
    z-index: 1;
    padding: 0;
  }
  @media (min-width: 500px) {
    .form-container {
      grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
    }
  }
}

